Updated mutation.sh with content of mutation-temp.sh